solutions/08-gateway-api/thecloudguy/golang.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-deploy
  labels:
    app: go-app
spec:
  selector:
    matchLabels:
      app: go-app
  replicas: 2
  template:
    metadata:
      labels:
        app: go-app
    spec:
      containers:
        - name: go-app
          image: aimvector/golang:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: secret-volume
              mountPath: /secrets/
            - name: config-volume
              mountPath: /configs/
          resources:
            requests:
              cpu: "50m"
              memory: "10Mi"
            limits:
              cpu: "100m"
              memory: "100Mi"
      volumes:
        - name: secret-volume
          secret:
            secretName: go-secret
        - name: config-volume
          configMap:
            name: go-config
---
kind: Service
apiVersion: v1
metadata:
  name: go-svc
spec:
  selector:
    app: go-app
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
