solutions/08-gateway-api/thecloudguy/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
  labels:
    app: web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
        - name: nginx-web
          image: nginx:stable-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html-volume
              mountPath: /usr/share/nginx/html/index.html
              subPath: index.html
          resources:
            requests:
              cpu: "50m"
              memory: "10Mi"
            limits:
              cpu: "100m"
              memory: "100Mi"
      volumes:
        - name: html-volume
          configMap:
            name: web-app
            defaultMode: 0644
---
apiVersion: v1
kind: Service
metadata:
  name: web-app
  labels:
    app: web-app
spec:
  type: ClusterIP
  selector:
    app: web-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
