solutions/08-gateway-api/thecloudguy/httproute-by-pathprefix.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: python-route
  namespace: default

spec:
  parentRefs:
    - name: gateway-api
      sectionName: http
      kind: Gateway

  hostnames:
    - example-app-python.localhost

  rules:
    - matches:
        - path:
            type: PathPrefix # matches the exact path, only allows to visit /
            value: /
      backendRefs:
        - name: python-svc
          port: 5000
          weight: 1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: go-route
  namespace: default

spec:
  parentRefs:
    - name: gateway-api
      sectionName: http
      kind: Gateway

  hostnames:
    - example-app-go.localhost

  rules:
    - matches:
        - path:
            type: PathPrefix # matches the exact path, only allows to visit /
            #type: PathPrefix # prefix match, allows to visit /*  Passes entire URL to upstream
            value: /
      backendRefs:
        - name: go-svc
          port: 5000
          weight: 1
