solutions/08-gateway-api/thecloudguy/httproute-by-tls.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: go-route
  namespace: default

spec:
  parentRefs:
    - name: gateway-api
      sectionName: http
      kind: Gateway
    - name: gateway-api
      sectionName: https
      kind: Gateway

  hostnames:
    - example-app.localhost

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/go
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: go-svc
          port: 5000
          weight: 1
